two more sections, interest section left

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   
   <!--NAVBAR-->
+
   <nav class="navbar">
     <div class="portrait">
       <img src="img/portrait.png" alt="author portrait">
@@ -34,8 +35,9 @@
   </nav>
 
   <!--ABOUT SECTION-->
+
   <section id="about">
-    <div class="about-header">
+    <div class="header about-header">
       <h1 class="about-heading">Evan <strong>Kapantais</strong></h1>
       <h3 class="about-sub">Plateon 56, Vrilissia, Athens 15235 - &#40;+34&#41; 666143854 - <a href="mailto:evankapantais@gmail.com" class="email-link">evankapantais@gmail.com</a></h3>
       <p class="about-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam repudiandae illo repellendus numquam mollitia. Sapiente reiciendis ipsam minus magnam repudiandae. Esse soluta voluptatem, dolor et repellendus vel reiciendis deleniti non.</p>
@@ -67,6 +69,8 @@
       </ul>
     </div>
   </section>
+
+  <!--Experience Section-->
 
   <section class="section" id="experience">
     <div class="container">
@@ -107,5 +111,80 @@
       </div>
     </div>
   </section>
+
+  <!--Education-->
+
+  <section class="section" id="education">
+    <div class="container">
+      <h1>EDUCATION</h1>
+      <div class="container-content">
+        <div class="row">
+          <div class="row-content">
+            <h2 class="event-title">UNIVERSITY OF LEEDS</h2>
+            <h3 class="event-sub">MASTER OF MUSIC</h3>
+            <p class="event-desc">Music Technology & Computer Music</p>
+            <p><em>Grade: </em> 8.0</p>
+          </div>
+          <div class="row-date">September 2013 - September - 2014</div>
+        </div>
+        <div class="row">
+          <div class="row-content">
+            <h2 class="event-title">UNIVERSITY OF WALES</h2>
+            <h3 class="event-sub">BACHELOR OF SCIENCE</h3>
+            <p class="event-desc">Music Production & Technology</p>
+            <p><em>Grade: </em>9.0</p>
+          </div>
+          <div class="row-date">September 2010 - June 2013</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--Skills-->
+
+  <section class="section" id="skills">
+    <div class="container">
+      <h1>SKILLS</h1>
+      <h3>PROGRAMMING LANGUAGES & TOOLS </h3>
+      <div class="tools">
+        <div class="tool">
+          <img src="img/icons/sass.svg" class="tool-icon">
+          <p>Sass</p>
+        </div>
+        <div class="tool">
+          <img src="img/icons/bootstrap.svg" class="tool-icon">
+          <p>Bootstrap</p>
+        </div>
+        <div class="tool">
+          <img src="img/icons/css.svg" class="tool-icon"> 
+          <p>Css3</p>     
+        </div>
+        <div class="tool">
+          <img src="img/icons/github.svg" class="tool-icon">
+          <p>Github</p>
+        </div>
+        <div class="tool">
+          <img src="img/icons/html.svg" class="tool-icon">
+          <p>Html</p>
+        </div>
+        <div class="tool">
+          <img src="img/icons/javascript.svg" class="tool-icon">
+          <p>Javascript</p>
+        </div>
+        <div class="tool">
+          <img src="img/icons/jquery.svg" class="tool-icon">
+          <p>jQuery</p>
+        </div> 
+      </div>
+      <h3>WORKFLOW</h3>
+      <ul class="workflow">
+        <li>Mobile-First, Responsive Design</li>
+        <li>Cross Browser Testing & Debugging</li>
+        <li>Criss Functional Teams</li>
+        <li>Agile Development & Scrum</li>
+      </ul>
+    </div>
+  </section>
+
 </body>
 </html>
