responsive for tablet, navbar not included

--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media.css">
   <title>Evan Kapantais Resume</title>
 </head>
 <body>
   
-  <!--NAVBAR-->
+  <!--Navbar-->
 
   <nav class="navbar">
     <div class="portrait">
       <img src="img/portrait.png" alt="author portrait">
     </div>
-    <ul>
+    <ul class="nav-list">
       <li class="list-item">
-        <a href="#about" class="nav-link">About</a>
+        <a href="#about" class="nav-link">ABOUT</a>
       </li>
       <li class="list-item">
-        <a href="#experience" class="nav-link">Experience</a>
+        <a href="#experience" class="nav-link">EXPERIENCE</a>
       </li>
       <li class="list-item">
-        <a href="#education" class="nav-link">Education</a>
+        <a href="#education" class="nav-link">EDUCATION</a>
       </li>
       <li class="list-item">
-        <a href="#skills" class="nav-link">Skills</a>
+        <a href="#skills" class="nav-link">SKILLS</a>
       </li>
       <li class="list-item">
-        <a href="#interests" class="nav-link">Interests</a>
+        <a href="#interests" class="nav-link">INTERESTS</a>
       </li>
     </ul>
   </nav>
 
-  <!--ABOUT SECTION-->
+  <!--About-->
 
   <section id="about">
     <div class="header about-header">
@@ -44,25 +45,25 @@
       <ul class="social">
         <li class="social-item">
           <img src="img/icons/github-bw.svg">
-          <a href="#">
+          <a href="https://github.com/evan-kapantais" target="_blank">
             <img src="img/icons/github-colour.svg">
           </a>
         </li>
         <li class="social-item">
           <img src="img/icons/twitter-bw.svg">
-          <a href="#">
+          <a href="https://twitter.com/evankapantais" target="_blank">
             <img src="img/icons/twitter-colour.svg">
           </a>
         </li>
         <li class="social-item">
           <img src="img/icons/linkedin-bw.svg">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/evankapantais/" target="_blank">
             <img src="img/icons/linkedin-colour.svg">
           </a>
         </li>
         <li class="social-item">
           <img src="img/icons/instagram-bw.svg">
-          <a href="#">
+          <a href="https://www.instagram.com/fairlycontingent/" target="_blank">
             <img src="img/icons/instagram-colour.svg">
           </a>
         </li>
@@ -70,7 +71,7 @@
     </div>
   </section>
 
-  <!--Experience Section-->
+  <!--Experience-->
 
   <section class="section" id="experience">
     <div class="container">
