--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <img src="img/portrait.png" alt="author portrait">
     </div>
     <ul class="nav-list">
+      <button class="menu-button">MENU</button>
       <li class="list-item">
         <a href="#about" class="nav-link">ABOUT</a>
       </li>
