--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div class="portrait">
       <img src="img/portrait.png" alt="author portrait">
     </div>
-    <button class="menu-button">MENU</button>
+    <button class="menu-button">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </button>
     <ul class="nav-list">
       <li class="list-item">
         <a href="#about" class="nav-link">ABOUT</a>
